Changes on section--1

--- a/index.html
+++ b/index.html
@@ -38,15 +38,21 @@
       </div>
       <div class="left--side">
         <h1 class="left--side-heading">Easy to Use Cloud Budget Management Software</h1>
-        <p></p>
+        <p class="left--side-content">Our software is made so you can access and manage your budget and expenses online at any time from any device. It provides detailed income and expense reports with graphs so you can easilly see your spending patterns and budget at a glance. Read below to find out more.</p>
+        <a href="#"><p class="link">Learn more</p></a>
       </div>
       <div class="right--side">
 
       </div>
 
-    <!-- <div class="part p-1s-2">
-
-    </div>--></div> 
+    <div class="part p-1s-2">
+      <h1>Features</h1>
+      <div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
+    </div></div> 
   </section>
 </body>
 </html>
