Changes on section--1

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 
       </div>
 
-    <div class="part p-1s-2">
-      <h1>Features</h1>
-      <div>
+    <!-- <div class="part p-1s-2"> -->
+      <!-- <h1>Features</h1> -->
+      <!-- <div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
-      </div>
-    </div></div> 
+      </div> -->
+    </div>
   </section>
 </body>
 </html>
