Changes on section-1

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
   <button class="btn--sign">Sign up</button>
   </div> 
   </header>
-  <section id="section--1" class="section container">
-    <div class="part p-1s-1">
+  <!-- SECTION-1 -->
+  <section id="section--1" class="section">
+    <div class="part p-1s-1 container">
       <div class="play">
         <img src="resources/images/PlaySolid(F5B0).png" alt="">
       </div>
@@ -41,17 +42,17 @@
         <p class="left--side-content">Our software is made so you can access and manage your budget and expenses online at any time from any device. It provides detailed income and expense reports with graphs so you can easilly see your spending patterns and budget at a glance. Read below to find out more.</p>
         <a href="#"><p class="link">Learn more</p></a>
       </div>
-      <div class="right--side">
+      <div class="right--side"></div>
+    </div>
 
+    <div class="part p-1s-2 container"> 
+      
+      <h1>Features</h1> 
+      <div class="box-container">
+        <div class="box"><div class="box-centent"></div></div>
+        <div class="box"><div class="box-centent"></div></div>
+        <div class="box"><div class="box-centent"></div></div>
       </div>
-
-    <!-- <div class="part p-1s-2"> -->
-      <!-- <h1>Features</h1> -->
-      <!-- <div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-      </div> -->
     </div>
   </section>
 </body>
