Changes on section-1

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       
       <h1>Features</h1> 
       <div class="box-container">
-        <div class="box"><div class="box-centent"></div></div>
-        <div class="box"><div class="box-centent"></div></div>
-        <div class="box"><div class="box-centent"></div></div>
+        <div class="box"><div class="box-content"></div></div>
+        <div class="box"><div class="box-content"></div></div>
+        <div class="box"><div class="box-content"></div></div>
       </div>
     </div>
   </section>
