Changes on section-1

--- a/index.html
+++ b/index.html
@@ -49,9 +49,15 @@
       
       <h1>Features</h1> 
       <div class="box-container">
-        <div class="box"><div class="box-content"></div></div>
-        <div class="box"><div class="box-content"></div></div>
-        <div class="box"><div class="box-content"></div></div>
+        <div class="box"><div class="box-content"><h1 class="box-content--heading">Supports All Currencies and Cards</h1><p class="box-content--text">We support all popular currencies and is fully customizable to add</p><a href="#">
+          <p class="btn-box">Read more</p>
+        </a></div></div>
+        <div class="box"><div class="box-content"><h1 class="box-content--heading">Manage your expenses on the go</h1><p class="box-content--text">You can access your account from anywhere in the world on any device</p><a href="#">
+          <p class="btn-box">Read more</p>
+        </a></div></div>
+        <div class="box"><div class="box-content"><h1 class="box-content--heading">Cloud Budget Management Software</h1><p class="box-content--text">Our software is made so you can access and manage your budget</p><a href="#">
+          <p class="btn-box">Read more</p>
+        </a></div></div>
       </div>
     </div>
   </section>
