--- a/index.html
+++ b/index.html
@@ -61,19 +61,13 @@
       </div>
     </div>
   </section>
-  <section class="container section">
+  <section is="section--2" class="container section">
     <h1>Technology</h1>
-    <div class="box-container sc-box-container">
-        <div class="s2-box">01</div><div class="box-content-s2"><h1 class="box-content--heading-s2">Supports All Currencies and Cards</h1><p class="box-content--text-s2">We support all popular currencies and is fully customizable to add</p><a href="#">
-          <p class="btn-box">Read more</p>
-        </a></div></div>
-        <div class="s2-box"><div class="box-content-s2"></div><h1 class="box-content--heading-s2">Manage your expenses on the go</h1><p class="box-content--text-s2">You can access your account from anywhere in the world on any device</p><a href="#">
-          <p class="btn-box">Read more</p>
-        </a></div></div>
-        <div class="s2-box"><div class="box-content-s2"></div><h1 class="box-content--heading-s2">Cloud Budget Management Software</h1><p class="box-content--text-s2">Our software is made so you can access and manage your budget</p><a href="#">
-          <p class="btn-box">Read more</p>
-        </a></div></div>
-      </div>
+    <div class="box-container">
+    <div class="s2-box"><h1>01</h1></div>
+    <div class="s2-box"><h1>01</h1></div>
+    <div class="s2-box"><h1>01</h1></div>
+  </div>
   </section>
 </body>
 </html>
