--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
   <section is="section--2" class="container section">
     <h1>Technology</h1>
     <div class="box-container">
-    <div class="s2-box"><h1>01</h1></div>
-    <div class="s2-box"><h1>01</h1></div>
-    <div class="s2-box"><h1>01</h1></div>
+    <div class="s2-box"><h1>01</h1><div class="s2-frame"></div><div class="s2-box-content"><h2>Cloud Storage</h2><p>Access your account from anywhere in the world on any device</p></div></div>
+    <div class="s2-box"><h1>02</h1><div class="s2-frame"></div><div class="s2-box-content"><h2>Secure</h2><p>All your information is stored on secure cloud servers</p></div></div>
+    <div class="s2-box"><h1>03</h1><div class="s2-frame"></div><div class="s2-box-content"><h2>PDF Download</h2><p>Download any of your reports in PDF format</p></div></div>
+    <div class="s2-box"><h1>04</h1><div class="s2-frame"></div><div class="s2-box-content"><h2>CSV Download</h2><p>All your information is stored on secure cloud servers</p></div></div>
   </div>
   </section>
 </body>
