Changes on section-3

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
         </a></div></div>
       </div>
     </div>
-  </div>
   <section is="section--2" class="container section">
     <h1>Technology</h1>
     <div class="box-container">
@@ -70,6 +69,18 @@
     </div><div class="s2-box-content"><h2>PDF Download</h2><p>Download any of your reports in PDF format</p></div></div>
     <div class="s2-box"><h1>04</h1><div class="s2-frame"><img src="../resources/images/VectorPDF.png" alt=""></div><div class="s2-box-content"><h2>CSV Download</h2><p>All your information is stored on secure cloud servers</p></div></div>
   </div>
+  </section>
+  <section class="container section--3">
+    <div class="s3--leftSide">
+      <h1></h1>
+      <p></p>
+      <div class="s3--icons"></div>
+    </div>
+    <div class="s3--rightSide">
+      <img src="" alt="">
+      <img src="" alt="">
+      <img src="" alt="">
+    </div>
   </section>
 </body>
 </html>
