Changes on section-3

--- a/index.html
+++ b/index.html
@@ -72,14 +72,18 @@
   </section>
   <section class="container section--3">
     <div class="s3--leftSide">
-      <h1></h1>
-      <p></p>
-      <div class="s3--icons"></div>
+      <h1>Stay focused on saving money</h1>
+      <p>It is important to stay focused on saving money in any way you can. We help you monitor your spending habits so you can easily spot and cut any unnecessary expenses. Simply join today to get started!</p>
+      <div class="s3--icons">
+        <img src="../resources/images/icon-1.png" alt="">
+        <img src="../resources/images/icon2.png" alt="">
+        <img src="../resources/images/icon-3.png" alt="">
+      </div>
     </div>
     <div class="s3--rightSide">
-      <img src="" alt="">
-      <img src="" alt="">
-      <img src="" alt="">
+      <img src="../resources/images/s3-left.jpg" alt="">
+      <img src="../resources/images/s3-center.jpg" alt="">
+      <img src="../resources/images/s3-right.jpg" alt="">
     </div>
   </section>
 </body>
