Changes on section-3

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       </div>
     </div>
     <div class="s3--rightSide">
-      <img src="../resources/images/s3-left.jpg" alt="">
-      <img src="../resources/images/s3-center.jpg" alt="">
-      <img src="../resources/images/s3-right.jpg" alt="">
+      <div class="s3--img"></div>
+      <div class="s3--img"></div>
+      <div class="s3--img"></div>
     </div>
   </section>
 </body>
