Changes on section-3

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     </div>
     <div class="s3--rightSide">
       <div class="s3--img"></div>
-      <!-- <div class="s3--img"></div>
-      <div class="s3--img"></div> -->
+      <div class="s3--img"></div>
+      <div class="s3--img"></div>
     </div>
   </section>
 </body>
