--- a/index.html
+++ b/index.html
@@ -86,5 +86,23 @@
       <div class="s3--img"></div>
     </div>
   </section>
+  <section class="container section--4">
+    <div class="s4--content-left">
+      Hello world!
+    </div>
+    <div class="s4--content-right">
+      <form action="" method="post">
+        <div class="half">
+        <input type="text" class="input--half">
+        <input type="text" class="input--half">
+        </div>
+        <input type="text" class="input--full">
+        <select class="input--full">
+          <option value="Smth1"></option>
+          <option value="Smth2"></option>
+          <button class="s4--content-btn">submit now</button>
+      </form>
+    </div>
+  </section>
 </body>
 </html>
