Changes on section--4

--- a/index.html
+++ b/index.html
@@ -93,14 +93,17 @@
     <div class="s4--content-right">
       <form action="" method="post">
         <div class="half">
-        <input type="text" class="input--half">
-        <input type="text" class="input--half">
+        <input type="text" class="s4-input input--half">
+        <input type="text" class="s4-input input--half">
         </div>
-        <input type="text" class="input--full">
-        <select class="input--full">
-          <option value="Smth1"></option>
-          <option value="Smth2"></option>
-          <button class="s4--content-btn">submit now</button>
+        <div class="full">
+        <input type="text" class="s4-input input--full">
+        <select class="s4-input input--full">
+          <option class="s4-input" value="">Select Service</option>
+          <option value="">Smth1</option>
+          <option value="">Smth2</option>
+          </div>
+          <input type="button" value="">
       </form>
     </div>
   </section>
