Changes on section--4

--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
     <div class="s4--content-right">
       <form action="" method="post">
         <div class="half">
-        <input type="text" class="s4-input input--half">
-        <input type="text" class="s4-input input--half">
+        <input type="text" class="s4-input input--half" placeholder="First Name">
+        <input type="text" class="s4-input input--half" placeholder="Last Name">
         </div>
         <div class="full">
-        <input type="text" class="s4-input input--full">
+        <input type="text" class="s4-input input--full" placeholder="Phone Number">
         <select class="s4-input input--full">
           <option class="s4-input" value="">Select Service</option>
           <option value="">Smth1</option>
           <option value="">Smth2</option>
           </div>
-          <input type="button" value="">
+          <input type="button" value="SUBMIT NOW">
       </form>
     </div>
   </section>
