--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
   </section>
   <section class="container section--4">
     <div class="s4--content-left">
-      Hello world!
+      <p class="s4-left--heading">Contact</p>
+      <p class="s4-left--text">Questions or concerns? Just fill out the form below and our support team will get back to you within 24 hours</p>
     </div>
     <div class="s4--content-right">
       <form action="" method="post">
@@ -98,12 +99,12 @@
         </div>
         <div class="full">
         <input type="text" class="s4-input input--full" placeholder="Phone Number">
-        <select class="s4-input input--full">
-          <option class="s4-input" value="">Select Service</option>
-          <option value="">Smth1</option>
-          <option value="">Smth2</option>
+        <select class="s4-input input--full select">
+          <option hidden value="">Select Service</option>
+          <option  value="">Smth1</option>
+          <option  value="">Smth2</option>
           </div>
-          <input type="button" value="SUBMIT NOW">
+          <input type="button" class="input--btn" value="SUBMIT NOW">
       </form>
     </div>
   </section>
