Last changes on section--5

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,14 @@
   <title>CLOUDBUDGET</title>
   <link rel="stylesheet" href="resources/styles/styles.css">
 </head>
+
 <body>
   <header class="container">
     <nav>
-        <ul class="">
-        <li><img src="resources/images/Vector_logo.png" alt="logo"><p class="logo_text">CLOUDBUDGET</p></li>
+      <ul class="">
+        <li><img src="resources/images/Vector_logo.png" alt="logo">
+          <p class="logo_text">CLOUDBUDGET</p>
+        </li>
       </ul>
       <ul class="flex-center">
         <li>OVERVIEW</li>
@@ -26,10 +30,11 @@
       </ul>
     </nav>
     <div class="main">
-    <h1 class="main--h1">CloudBudget</h1>
-    <p class="content">Cloud budget management for everyone. Only €69.95 a Month After a 7 Day Trial of Up to €4.99</p>
-  <button class="btn--sign">Sign up</button>
-  </div> 
+      <h1 class="main--h1">CloudBudget</h1>
+      <p class="content">Cloud budget management for everyone. Only €69.95 a Month After a 7 Day Trial of Up to €4.99
+      </p>
+      <button class="btn--sign">Sign up</button>
+    </div>
   </header>
   <!-- SECTION-1 -->
   <div id="section--1" class="section">
@@ -39,74 +44,157 @@
       </div>
       <div class="left--side">
         <h1 class="left--side-heading">Easy to Use Cloud Budget Management Software</h1>
-        <p class="left--side-content">Our software is made so you can access and manage your budget and expenses online at any time from any device. It provides detailed income and expense reports with graphs so you can easilly see your spending patterns and budget at a glance. Read below to find out more.</p>
-        <a href="#"><p class="link">Learn more</p></a>
+        <p class="left--side-content">Our software is made so you can access and manage your budget and expenses online
+          at any time from any device. It provides detailed income and expense reports with graphs so you can easilly
+          see your spending patterns and budget at a glance. Read below to find out more.</p>
+        <a href="#">
+          <p class="link">Learn more</p>
+        </a>
       </div>
       <div class="right--side"></div>
     </div>
 
-    <div class="part p-1s-2 container"> 
-      
-      <h1>Features</h1> 
+    <div class="part p-1s-2 container">
+
+      <h1>Features</h1>
       <div class="box-container">
-        <div class="box"><div class="box-content"><h1 class="box-content--heading">Supports All Currencies and Cards</h1><p class="box-content--text">We support all popular currencies and is fully customizable to add</p><a href="#">
-          <p class="btn-box">Read more</p>
-        </a></div></div>
-        <div class="box"><div class="box-content"><h1 class="box-content--heading">Manage your expenses on the go</h1><p class="box-content--text">You can access your account from anywhere in the world on any device</p><a href="#">
-          <p class="btn-box">Read more</p>
-        </a></div></div>
-        <div class="box"><div class="box-content"><h1 class="box-content--heading">Cloud Budget Management Software</h1><p class="box-content--text">Our software is made so you can access and manage your budget</p><a href="#">
-          <p class="btn-box">Read more</p>
-        </a></div></div>
-      </div>
-    </div>
-  <section is="section--2" class="container section">
-    <h1>Technology</h1>
-    <div class="box-container">
-    <div class="s2-box"><h1>01</h1><div class="s2-frame"><img src="../resources/images/FrameSECURE.png" alt=""></div><div class="s2-box-content"><h2>Cloud Storage</h2><p>Access your account from anywhere in the world on any device</p></div></div>
-    <div class="s2-box"><h1>02</h1><div class="s2-frame"><img src="../resources/images/FrameCLOUDSECURE.png" alt=""></div><div class="s2-box-content"><h2>Secure</h2><p>All your information is stored on secure cloud servers</p></div></div>
-    <div class="s2-box"><h1>03</h1><div class="s2-frame"><img src="../resources/images/VectorCSV.png" alt="">
-    </div><div class="s2-box-content"><h2>PDF Download</h2><p>Download any of your reports in PDF format</p></div></div>
-    <div class="s2-box"><h1>04</h1><div class="s2-frame"><img src="../resources/images/VectorPDF.png" alt=""></div><div class="s2-box-content"><h2>CSV Download</h2><p>All your information is stored on secure cloud servers</p></div></div>
-  </div>
-  </section>
-  <section class="container section--3">
-    <div class="s3--leftSide">
-      <h1>Stay focused on saving money</h1>
-      <p>It is important to stay focused on saving money in any way you can. We help you monitor your spending habits so you can easily spot and cut any unnecessary expenses. Simply join today to get started!</p>
-      <div class="s3--icons">
-        <img src="../resources/images/icon-1.png" alt="">
-        <img src="../resources/images/icon2.png" alt="">
-        <img src="../resources/images/icon-3.png" alt="">
-      </div>
-    </div>
-    <div class="s3--rightSide">
-      <div class="s3--img"></div>
-      <div class="s3--img"></div>
-      <div class="s3--img"></div>
-    </div>
-  </section>
-  <section class="container section--4">
-    <div class="s4--content-left">
-      <p class="s4-left--heading">Contact</p>
-      <p class="s4-left--text">Questions or concerns? Just fill out the form below and our support team will get back to you within 24 hours</p>
-    </div>
-    <div class="s4--content-right">
-      <form action="" method="post">
-        <div class="half">
-        <input type="text" class="s4-input input--half" placeholder="First Name">
-        <input type="text" class="s4-input input--half" placeholder="Last Name">
+        <div class="box">
+          <div class="box-content">
+            <h1 class="box-content--heading">Supports All Currencies and Cards</h1>
+            <p class="box-content--text">We support all popular currencies and is fully customizable to add</p><a
+              href="#">
+              <p class="btn-box">Read more</p>
+            </a>
+          </div>
         </div>
-        <div class="full">
-        <input type="text" class="s4-input input--full" placeholder="Phone Number">
-        <select class="s4-input input--full select">
-          <option hidden value="">Select Service</option>
-          <option  value="">Smth1</option>
-          <option  value="">Smth2</option>
+        <div class="box">
+          <div class="box-content">
+            <h1 class="box-content--heading">Manage your expenses on the go</h1>
+            <p class="box-content--text">You can access your account from anywhere in the world on any device</p><a
+              href="#">
+              <p class="btn-box">Read more</p>
+            </a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="box-content">
+            <h1 class="box-content--heading">Cloud Budget Management Software</h1>
+            <p class="box-content--text">Our software is made so you can access and manage your budget</p><a href="#">
+              <p class="btn-box">Read more</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <section is="section--2" class="container section">
+      <h1>Technology</h1>
+      <div class="box-container">
+        <div class="s2-box">
+          <h1>01</h1>
+          <div class="s2-frame"><img src="../resources/images/FrameSECURE.png" alt=""></div>
+          <div class="s2-box-content">
+            <h2>Cloud Storage</h2>
+            <p>Access your account from anywhere in the world on any device</p>
+          </div>
+        </div>
+        <div class="s2-box">
+          <h1>02</h1>
+          <div class="s2-frame"><img src="../resources/images/FrameCLOUDSECURE.png" alt=""></div>
+          <div class="s2-box-content">
+            <h2>Secure</h2>
+            <p>All your information is stored on secure cloud servers</p>
+          </div>
+        </div>
+        <div class="s2-box">
+          <h1>03</h1>
+          <div class="s2-frame"><img src="../resources/images/VectorCSV.png" alt="">
+          </div>
+          <div class="s2-box-content">
+            <h2>PDF Download</h2>
+            <p>Download any of your reports in PDF format</p>
+          </div>
+        </div>
+        <div class="s2-box">
+          <h1>04</h1>
+          <div class="s2-frame"><img src="../resources/images/VectorPDF.png" alt=""></div>
+          <div class="s2-box-content">
+            <h2>CSV Download</h2>
+            <p>All your information is stored on secure cloud servers</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container section--3">
+      <div class="s3--leftSide">
+        <h1>Stay focused on saving money</h1>
+        <p>It is important to stay focused on saving money in any way you can. We help you monitor your spending habits
+          so you can easily spot and cut any unnecessary expenses. Simply join today to get started!</p>
+        <div class="s3--icons">
+          <img src="../resources/images/icon-1.png" alt="">
+          <img src="../resources/images/icon2.png" alt="">
+          <img src="../resources/images/icon-3.png" alt="">
+        </div>
+      </div>
+      <div class="s3--rightSide">
+        <div class="s3--img"></div>
+        <div class="s3--img"></div>
+        <div class="s3--img"></div>
+      </div>
+    </section>
+    <section class="container section--4">
+      <div class="s4--content-left">
+        <p class="s4-left--heading">Contact</p>
+        <p class="s4-left--text">Questions or concerns? Just fill out the form below and our support team will get back
+          to you within 24 hours</p>
+      </div>
+      <div class="s4--content-right">
+        <form action="" method="post">
+          <div class="half">
+            <input type="text" class="s4-input input--half" placeholder="First Name">
+            <input type="text" class="s4-input input--half" placeholder="Last Name">
+          </div>
+          <div class="full">
+            <input type="text" class="s4-input input--full" placeholder="Phone Number">
+            <select class="s4-input input--full select">
+              <option hidden value="">Select Service</option>
+              <option value="">Smth1</option>
+              <option value="">Smth2</option>
           </div>
           <input type="button" class="input--btn" value="SUBMIT NOW">
-      </form>
-    </div>
-  </section>
+        </form>
+      </div>
+    </section>
+    <section class="container section--5-full">
+      <div class="section--5">
+      <div class="s5-content s5--address">
+        <p class="heading">Address</p>
+        <p class="text">Pipang Ltd, Griva Digeni,
+81-83 Jacovides Tower, 1st Floor
+1090 Picosia USA</p>
+      </div>
+      <div class="s5-content s5--services">
+        <p class="heading">Services</p>
+          <p class="text">Overview<br>
+         Features<br>
+         Technology<br>
+         Terms & Conditions<br>
+         Privecy</p>
+
+      </div>
+      <div class="s5-content s5--contact">
+        <p class="heading">Get in Touch</p>
+          <p class="text">info@cloudbudget.com<br>
+          +1 844-721-7120<br><img class="vector" src="../resources/images/Vector_facebook.png" alt="">
+          <img class="vector" src="../resources/images/vector_linkedin.png" alt="">
+          <img class="vector" src="../resources/images/Vector_twitter.png" alt=""></p>
+      </div>
+      <div class="s5-content s5--support">
+        <p class="heading">We Support</p>
+        <p class="text">
+        <img src="../resources/images/support.png" alt=""></p>
+      </div></div>
+      <footer class="footer--text">Copyright 2018 CloudBudget</footer>
+    </section>
 </body>
+
 </html>
